--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     </head>
     <body>
         <h1>Welcome to HTML 101!</h1>
+        <h2>This a subheadline</h2>
+        <h3>THis is an even smaller headline</h3>
+        <h4>Im an h4</h4>
+        <h5>Im an h5</h5>
+        <h6>Im the smallest headline</h6>
+        <h1>thereis noting</h1>
         <p>My first paragraph tag.</p>
+        <a href="https://github.com/GabrielKim5/pt_html_101">This is a link</a>
+        <img src="https://placekitten.com/450/450" alt="Kitten">
     </body>
 </html>
