added contact form HTML

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <p>My first paragraph tag.</p>
         <a href="https://github.com/GabrielKim5/pt_html_101">This is a link</a>
         <img src="https://placekitten.com/450/450" alt="Kitten">
+        <a href="contact.html">Contact form</a>
     </body>
 </html>
